@@ -77,7 +77,8 @@ public final class Arguments {
                     "TieredStopAtLevel",
                     "MaxMetaspaceSize",
                     "HeapDumpOnOutOfMemoryError",
-                    "UseJVMCICompiler");
+                    "UseJVMCICompiler",
+                    "EnableDynamicAgentLoading");
 
     private static final Map<String, String> MAPPED_XX_OPTIONS = Map.of(
                     "TieredCompilation", "engine.MultiTier");
@@ -181,6 +182,8 @@ public final class Arguments {
                         handler.addModules(optionString.substring("--add-modules=".length()));
                     } else if (optionString.startsWith("--enable-native-access=")) {
                         handler.enableNativeAccess(optionString.substring("--enable-native-access=".length()));
+                    } else if (optionString.startsWith("--illegal-native-access=")) {
+                        builder.option("java.IllegalNativeAccess", optionString.substring("--illegal-native-access=".length()));
                     } else if (optionString.startsWith("--module-path=")) {
                         builder.option("java.ModulePath", optionString.substring("--module-path=".length()));
                     } else if (optionString.startsWith("--upgrade-module-path=")) {
